--- a/css/choicestyles.css
+++ b/css/choicestyles.css
@@ -57,7 +57,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #content #time table {
-	margin-left:80px; border-collapse:collapse; position:absolute; top:50%; width:600px; opacity:0.93; background-color:#fff;
+	margin-left:80px; border-collapse:collapse; position:absolute; top:20%; width:600px; opacity:0.93; background-color:#fff;
 }
 
 #content table tr {
@@ -75,6 +75,25 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 #content table tr:hover {
 	background-color:#ddd
 }
+
+#content #demopause {
+	margin-left:80px; float:left; width:600px; padding:10px; border: 3px #555 solid; text-align:center; opacity:0.93;
+	text-decoration:none; font-weight:normal; color:#000; position:absolute; top:20%; background-color:#fff;
+}
+
+#content #demopause a {
+	text-decoration:none; color:#000; font-weight:bold; 
+}
+
+#content #pause {
+	margin-left:280px; float:left; width:200px; padding:10px; border: 3px #555 solid; text-align:center; opacity:0.93;
+	text-decoration:none; font-weight:normal; color:#000; position:absolute; top:70%; background-color:#fff;
+}
+
+#content #pause a {
+	text-decoration:none; font-weight:normal; color:#000
+}
+
 
 #footer p {
 	font-size:24px; margins:30px; float:right; 
