--- a/css/styles.css
+++ b/css/styles.css
@@ -57,39 +57,39 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #content #box1 {
-	padding:70 40px; border: 3px #009933 solid; margin:0 auto; text-align:center
+	padding:70 40px; border: 3px #0F3DDB solid; margin:0 auto; text-align:center; 
 }
 
 #content #box1 h1 {
-	color:#009933; text-decoration:none; font-weight:normal;
+	color:#0F3DDB; text-decoration:none; font-weight:normal;
 }
 
 #content #box2 {
-	padding:70 40px; border: 3px #FF0000 solid; margin:0 auto; text-align:center
+	padding:70 40px; border: 3px #009933 solid; margin:0 auto; text-align:center
 }
 
 #content #box2 h1 {
-	color:#FF0000; text-decoration:none; font-weight:normal;
+	color:#009933; text-decoration:none; font-weight:normal;
 }
 
 #content #ascend {
-	padding:70 40px; border: 3px #FF0000 solid; margin:0 auto; text-align:center
+	padding:70 40px; border: 3px #009933 solid; margin:0 auto; text-align:center
 }
 
 #content #ascend h1 {
-	color:#FF0000; text-decoration:none; font-weight:normal;
+	color:#009933; text-decoration:none; font-weight:normal;
 }
 
 #content #descend {
-	padding:70 40px; border: 3px #FF0000 solid; margin:0 auto; text-align:center
+	padding:70 40px; border: 3px #009933 solid; margin:0 auto; text-align:center
 }
 
 #content #descend h1 {
-	color:#FF0000; text-decoration:none; font-weight:normal;
+	color:#009933; text-decoration:none; font-weight:normal;
 }
 
 #content #pause {
-	float:left ;width:30%; padding:10px; border: 3px #555 solid; margin-top:10px; text-align:center; 
+	float:left ;width:30%; padding:10px; border: 3px #FF0000 solid; margin-top:10px; text-align:center; 
 	text-decoration:none; font-weight:normal; color:#000
 }
 
