--- a/css/choicestylestry.css
+++ b/css/choicestylestry.css
@@ -4,7 +4,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -17,20 +17,9 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 /* css Styles */
 
 #wrapper {
-	width:800px; margin:0 auto; 
+	width:800px; margin:0 auto;
 }
 
-#top {
-	width:100%; margin:0 auto; background-color:#ddd; 
-}
-
-#top .anu img {
-	margin:20px; height:60px; float:right; 
-}
-
-#top .mewr img {
-	margin:20px; background-color:#ddd; height:60px; width:263px;
-}
 
 #content {
 	width:760px; margin:20 20 20 20px
@@ -58,7 +47,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #content #time table {
-	font-size:80%; margin-left:80px; border-collapse:collapse; position:absolute; top:10px; width:600px; opacity:0.93; background-color:#fff;
+	font-size:70%; margin-left:40px; border-collapse:collapse; position:absolute; top:10px; width:680px; opacity:0.93; background-color:#fff;
 }
 
 #content table tr {
@@ -66,15 +55,39 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #content th {
-	width:200px; font-weight:bold; background-color:#555; color:#fff; text-align:center; padding:10px 0
+	line-height: 1.1; font-weight:bold; background-color:#555; color:#fff; text-align:center; padding:3px 0
 }
 
 #content table td {
-	width:200px; text-align:center; padding:10px 0
+	line-height: 1.1; padding:3px 0; text-align:center;
 }
 
-#content table tr:hover {
+#content table td ul {
+	list-style-position: inside; text-align:left;
+}
+
+#content .statusquodemo {
 	background-color:#ddd
+}
+
+#content .statusquodemo .statusquoplay {
+	font-weight: bold;
+}
+
+#content .opt1demo {
+	background-color:#ddd
+}
+
+#content .opt1demo .opt1play {
+	font-weight: bold;
+}
+
+#content .opt2demo {
+	background-color:#ddd
+}
+
+#content .opt2demo .opt2play {
+	font-weight: bold;
 }
 
 #content #time {
@@ -94,7 +107,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #content #demopause a {
-	color:#FF0000; 
+	color:#FF0000;
 }
 
 #content #pause {
@@ -108,7 +121,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 
 
 #footer p {
-	font-size:24px; margin:30px; float:right; 
+	font-size:24px; margin:30px; float:right;
 }
 
 #footer p a {
@@ -121,7 +134,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #footer #back p {
-	font-size:24px; margins:30px; float:left; 
+	font-size:24px; margins:30px; float:left;
 }
 
 #footer #back p a {
@@ -134,7 +147,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 }
 
 #footer #exit p {
-	font-size:24px; margins:30px; float:right; 
+	font-size:24px; margins:30px; float:right;
 }
 
 #footer #exit p a {
